unpackaged/main/default/objects/litify__lu_Trigger_Feature__c/litify__lu_Trigger_Feature__c.object-meta.xml
<CustomObject>
    <description>Used to enable/disable specific trigger features for a product.</description>
    <label>Trigger Feature</label>
    <nameField>
        <label>Trigger Feature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trigger Features</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>