unpackaged/main/default/objects/litify__lu_Trigger_Feature__c/fields/litify__lu_Enabled__c.field-meta.xml
<CustomField>
    <fullName>litify__lu_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>