unpackaged/main/default/objects/litify__lu_Trigger_Feature__c/fields/litify__lu_Label__c.field-meta.xml
<CustomField>
    <fullName>litify__lu_Label__c</fullName>
    <label>Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>