unpackaged/main/default/objects/litify__lu_Trigger_Feature__c/fields/litify__lu_Litify_Product__c.field-meta.xml
<CustomField>
    <fullName>litify__lu_Litify_Product__c</fullName>
    <label>Litify Product</label>
    <referenceTo>litify__lu_Litify_Product__c</referenceTo>
    <relationshipLabel>Product Trigger Objects</relationshipLabel>
    <relationshipName>lu_Trigger_Features</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>